[project]
name = "gpt"
version = "0.1.0"
description = "OpenAI text generation utility"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.6.0",
]

[project.scripts]
gpt = "gpt.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gpt"]
